--- a/SubEthaEdit-Mac/English.lproj/PrintOptions.xib
+++ b/SubEthaEdit-Mac/English.lproj/PrintOptions.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4504" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1050" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PlainTextDocument">
@@ -23,7 +22,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <view key="contentView">
                         <rect key="frame" x="2" y="2" width="228" height="198"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <matrix verticalHuggingPriority="750" allowsEmptySelection="NO" autosizesCells="NO" id="97">
                                 <rect key="frame" x="12" y="58" width="156" height="98"/>
@@ -82,12 +81,12 @@
                                     <font key="font" metaFont="smallSystem"/>
                                 </buttonCell>
                                 <connections>
+                                    <binding destination="61" name="value" keyPath="selection.SEEResizeDocumentFont" id="83"/>
                                     <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="112">
                                         <dictionary key="options">
                                             <string key="NSValueTransformerName">NSNegateBoolean</string>
                                         </dictionary>
                                     </binding>
-                                    <binding destination="61" name="value" keyPath="selection.SEEResizeDocumentFont" id="83"/>
                                 </connections>
                             </button>
                             <textField verticalHuggingPriority="750" id="49">
@@ -139,18 +138,18 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                                 <connections>
-                                    <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="138">
-                                        <dictionary key="options">
-                                            <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                        </dictionary>
-                                    </binding>
                                     <binding destination="61" name="value" keyPath="selection.SEEFontAttributes" id="136">
                                         <dictionary key="options">
-                                            <string key="NSValueTransformerName">FontAttributesToString</string>
+                                            <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                             <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                             <bool key="NSConditionallySetsEditable" value="NO"/>
                                             <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                            <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                            <string key="NSValueTransformerName">FontAttributesToString</string>
+                                        </dictionary>
+                                    </binding>
+                                    <binding destination="61" name="enabled" keyPath="selection.SEEUseCustomFont" id="138">
+                                        <dictionary key="options">
+                                            <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
                                         </dictionary>
                                     </binding>
                                 </connections>
@@ -176,7 +175,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <view key="contentView">
                         <rect key="frame" x="2" y="2" width="228" height="82"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button id="32">
                                 <rect key="frame" x="11" y="52" width="122" height="18"/>
@@ -235,7 +234,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <view key="contentView">
                         <rect key="frame" x="2" y="2" width="261" height="150"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button id="24">
                                 <rect key="frame" x="171" y="77" width="78" height="18"/>
@@ -267,8 +266,8 @@
                                     <font key="font" metaFont="smallSystem"/>
                                 </buttonCell>
                                 <connections>
-                                    <binding destination="61" name="enabled" keyPath="selection.SEEParticipants" id="139"/>
                                     <binding destination="61" name="value" keyPath="selection.SEEParticipantImages" id="119"/>
+                                    <binding destination="61" name="enabled" keyPath="selection.SEEParticipants" id="139"/>
                                 </connections>
                             </button>
                             <button id="27">
@@ -356,7 +355,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <view key="contentView">
                         <rect key="frame" x="2" y="2" width="260" height="122"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField verticalHuggingPriority="750" id="6">
                                 <rect key="frame" x="105" y="65" width="45" height="19"/>
