--- a/SubEthaEdit-Mac/German.lproj/ConnectionBrowser.xib
+++ b/SubEthaEdit-Mac/German.lproj/ConnectionBrowser.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4504" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1050" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ConnectionBrowserController">
@@ -52,7 +51,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <popUpButtonCell key="cell" type="square" title="Item1" bezelStyle="shadowlessSquare" alignment="left" borderStyle="bezel" inset="2" pullsDown="YES" preferredEdge="maxY" selectedItem="35" id="112">
                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
+                            <font key="font" metaFont="menu"/>
                             <menu key="menu" title="OtherViews" id="34">
                                 <items>
                                     <menuItem title="Item1" hidden="YES" id="35"/>
@@ -165,9 +164,9 @@
         <customObject id="69" userLabel="LoginSheetController" customClass="LoginSheetController"/>
     </objects>
     <resources>
-        <image name="EmptyButton" width="128" height="128"/>
-        <image name="FriendCast16" width="128" height="128"/>
-        <image name="FriendCast16Active" width="128" height="128"/>
+        <image name="EmptyButton" width="28" height="22"/>
+        <image name="FriendCast16" width="16" height="12"/>
+        <image name="FriendCast16Active" width="16" height="12"/>
         <image name="URLIconNotOK" width="128" height="128"/>
     </resources>
 </document>
