--- a/SubEthaEdit-Mac/German.lproj/EncodingDoctor.xib
+++ b/SubEthaEdit-Mac/German.lproj/EncodingDoctor.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4504" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1090" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="EncodingDoctorDialog">
@@ -24,7 +23,7 @@
             <rect key="contentRect" x="62" y="444" width="537" height="160"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="832"/>
             <view key="contentView" autoresizesSubviews="NO" id="6" customClass="DialogBackgroundView">
-                <rect key="frame" x="1" y="9" width="537" height="160"/>
+                <rect key="frame" x="0.0" y="0.0" width="537" height="160"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <scrollView autohidesScrollers="YES" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="7">
@@ -32,7 +31,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="mbd-Fb-rS1">
                             <rect key="frame" x="1" y="17" width="495" height="79"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="14" headerView="44" id="8" customClass="FindAllTableView">
                                     <rect key="frame" x="0.0" y="0.0" width="495" height="79"/>
