--- a/SubEthaEdit-Mac/German.lproj/Export.xib
+++ b/SubEthaEdit-Mac/German.lproj/Export.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4504" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1090" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PlainTextDocument">
@@ -31,17 +30,17 @@
             <rect key="contentRect" x="67" y="419" width="454" height="261"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="832"/>
             <view key="contentView" autoresizesSubviews="NO" id="35">
-                <rect key="frame" x="1" y="9" width="454" height="261"/>
+                <rect key="frame" x="0.0" y="0.0" width="454" height="261"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <tabView autoresizesSubviews="NO" controlSize="small" id="37">
+                    <tabView controlSize="small" id="37">
                         <rect key="frame" x="13" y="50" width="428" height="194"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <tabViewItems>
                             <tabViewItem label="Webseite" identifier="" id="44">
                                 <view key="view" autoresizesSubviews="NO" id="41">
-                                    <rect key="frame" x="10" y="25" width="408" height="156"/>
-                                    <autoresizingMask key="autoresizingMask"/>
+                                    <rect key="frame" x="10" y="29" width="408" height="152"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <button id="47">
                                             <rect key="frame" x="18" y="84" width="147" height="18"/>
@@ -118,8 +117,8 @@
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
                                             <connections>
-                                                <binding destination="25" name="enabled" keyPath="selection.HTML.ShowParticipants" id="63"/>
                                                 <binding destination="25" name="value" keyPath="selection.HTML.ShowAIMAndEmail" id="56"/>
+                                                <binding destination="25" name="enabled" keyPath="selection.HTML.ShowParticipants" id="63"/>
                                             </connections>
                                         </button>
                                         <button id="45">
