--- a/SubEthaEdit-Mac/German.lproj/URLBubbleWindow.xib
+++ b/SubEthaEdit-Mac/German.lproj/URLBubbleWindow.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4504" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" promptedForUpgradeToXcode5="NO">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1050" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="URLBubbleWindow">
@@ -42,6 +41,6 @@
         </customView>
     </objects>
     <resources>
-        <image name="hud_titlebar-close" width="128" height="128"/>
+        <image name="hud_titlebar-close" width="13" height="13"/>
     </resources>
 </document>
