--- a/SubEthaEdit-Mac/ServerConnection.xib
+++ b/SubEthaEdit-Mac/ServerConnection.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4504" systemVersion="13A584" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4511" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1090" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4511"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ServerConnectionWindowController">
@@ -24,7 +23,7 @@
             <rect key="contentRect" x="106" y="420" width="365" height="393"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <view key="contentView" autoresizesSubviews="NO" id="6">
-                <rect key="frame" x="1" y="9" width="365" height="393"/>
+                <rect key="frame" x="0.0" y="0.0" width="365" height="393"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView id="7">
@@ -78,7 +77,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <clipView key="contentView" id="Fj5-nK-5zi">
                             <rect key="frame" x="1" y="17" width="365" height="223"/>
-                            <autoresizingMask key="autoresizingMask"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="20" headerView="115" id="12">
                                     <rect key="frame" x="0.0" y="0.0" width="365" height="223"/>
@@ -136,7 +135,7 @@
                                                 <binding destination="72" name="selectedTag" keyPath="arrangedObjects.AccessState" id="100"/>
                                             </connections>
                                         </tableColumn>
-                                        <tableColumn identifier="IsAnnounced" width="64.3388671875" minWidth="64.3388671875" maxWidth="64" id="16">
+                                        <tableColumn identifier="IsAnnounced" width="64" minWidth="64.3388671875" maxWidth="64" id="16">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Announced">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
